syntax = "proto3";

option go_package = "./chat";

package chat;

import "google/protobuf/timestamp.proto";

service Chat {
  rpc HealthCheck(HealthRequest) returns (HealthResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Conect(ConnectRequest) returns (stream ChatEvent) {}
  rpc SendMessage(SendRequest) returns (SendResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
}

message HealthRequest {}
message HealthResponse {}

message ChatInfo {
  int64 id = 1;
  string title = 2;
}

enum EventType {
  Message = 0;
  Info = 1;
}

message ChatEvent {
  EventType type = 1;
  int64 userID = 2;
  string userName = 3;
  string text = 4;
  int32 color = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message CreateRequest {
  string name = 1;
  repeated int64 userid = 2;
}

message CreateResponse {
  int64 id = 1;
}

message ConnectRequest {
  int64 chatID = 1;
}

message SendRequest {
  int64 chatID = 1;
  ChatEvent message = 2;
}

message SendResponse {}

message DeleteRequest {
  int64 chatID = 1;
}

message DeleteResponse {}

message ListRequest {}

message ListResponse {
  repeated ChatInfo chats = 1;
}